Fix item card creating horizontal scroll because of header padding/margin

--- a/src/client/app/home/item/item.component.scss
+++ b/src/client/app/home/item/item.component.scss
@@ -4,6 +4,11 @@
 	margin-left: -24px;
 	margin-right: -24px;
 
+	@media (max-width: 599px) {
+		margin-left: -16px;
+		margin-right: -16px;
+	}
+
 	button:first-child {
 		padding-top: 24px;
 		padding-left: 24px;
